# proyecto-vision

./: .gitignore  Makefile  README.md  app.py  exercise_form.ipynb  main.py  pyproject.toml  realtime.py  squat_form.ipynb  train_model.py  xgboost_training.ipynb
.claude/: settings.local.json
scripts/: build_xgboost_notebook.py  check.py
src/: __init__.py  angle_utils.py  injury_advice.py  pose_extractor.py  squat_classifier.py
tests/: test_classifier.py
